Docker containers added

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-DATABASE_URL="postgresql://yourusername:yourpassword@localhost:5432/yourdbname?schema=public"
+DB_PORT=""
+DB_USER=""
+DB_PASSWORD=""
+DB_NAME=""
+DB_TEST_PORT=""
+DB_TEST_NAME=""
