--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/supertest": "^2.0.12",
     "jest": "^27.5.1",
     "jest-mock-extended": "2.0.4",
     "prisma": "^4.4.0",
@@ -28,6 +29,7 @@
     "dotenv-cli": "^6.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "supertest": "^6.3.0"
   }
 }
