--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "dotenv -e .env.test yarn migrate:test && jest -i",
+    "test:e2e": "jest --config ./test/jest-e2e.config.ts",
     "migrate:dev": "dotenv -e .env.development prisma migrate dev",
     "migrate:test": "dotenv -e .env.test prisma migrate deploy"
   },
@@ -14,7 +15,9 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
     "jest-mock-extended": "2.0.4",
     "prisma": "^4.4.0",
@@ -30,6 +33,8 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "supertest": "^6.3.0"
+    "pg": "^8.8.0",
+    "supertest": "^6.3.0",
+    "uuid": "^9.0.0"
   }
 }
